# 4-containers-kablam

./: .gitignore  .pylintrc  Dockerfile  Pipfile  README.md  requirements.txt
.github/workflows/: build.yaml  ml-tests.yaml
machine-learning-client/: speech_recog.py
src/machine_learning_client/: Dockerfile  Pipfile  pyproject.toml  readme.md  requirements.txt  speech_recog.py  swear_word.py
src/machine_learning_client/tests/: test_transcription.py
web-app/: Pipfile  app.py
web-app/templates/: index.html
web_app/: Pipfile  app.py  requirements.txt
web_app/templates/: index.html
